Fix Bug #54918 - Crash when there is a failure to read the browscap file